force-app/main/default/objects/Aportacion2__c/fields/Cliente__c.field-meta.xml
<CustomField>
    <fullName>Cliente__c</fullName>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Aportaciones</relationshipLabel>
    <relationshipName>Aportaciones</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>