force-app/main/default/objects/Aportacion2__c/fields/CRD__c.field-meta.xml
<CustomField>
    <fullName>CRD__c</fullName>
    <formula>Pedido__r.Fecha_de_Compromiso_con_el_Cliente__c</formula>
    <label>CRD</label>
    <type>Date</type>
</CustomField>