force-app/main/default/objects/Aportacion2__c/fields/Disponible__c.field-meta.xml
<CustomField>
    <fullName>Disponible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disponible</label>
    <type>Checkbox</type>
</CustomField>