force-app/main/default/objects/Aportacion2__c/fields/EstadoDelPedido__c.field-meta.xml
<CustomField>
    <fullName>EstadoDelPedido__c</fullName>
    <formula>TEXT ( Pedido__r.Estado2__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estado del pedido</label>
    <type>Text</type>
</CustomField>