force-app/main/default/objects/Aportacion2__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TipoDeAportacion</valueSetName>
    </valueSet>
</CustomField>